@startuml

title __IMAGE's Class Diagram__\n

  namespace com.example.sickar {
    namespace image {
      class com.example.sickar.image.ImageActivity {
          {static} - TAG : String
          + onOptionsItemSelected()
          + onWindowFocusChanged()
          # onCreate()
          - addFragmentsToPagerAdapter()
      }
    }
  }
  

  namespace com.example.sickar {
    namespace image {
      class com.example.sickar.image.ImageSystemPageFragment {
          {static} - TAG : String
          - images : Map<String, Bitmap>
          - initXY : float[]
          {static} - radioGroupNamesToIds : Map<String, Integer>
          - viewXY : int[]
          + ImageSystemPageFragment()
          + onCreateView()
          + onResume()
          ~ ImageSystemPageFragment()
          - setDefaultImage()
          - setImageBitmap()
      }
    }
  }
  

  com.example.sickar.image.ImageActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.sickar.image.ImageActivity o-- com.example.sickar.main.helpers.Item : item
  com.example.sickar.image.ImageActivity o-- com.example.sickar.main.DataViewModel : viewModel
  com.example.sickar.image.ImageSystemPageFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
